Propagate flag kForceMediaFoundationVideoCapture to video capture service

Because the flag was not propagated, it stopped working with the rollout of the
video capture service in M61. As a workaround until the fix reaches stable,
users can disable the video capture service using command-line flag
--disable-features=MojoVideoCapture.

Bug: 777880
Change-Id: I0971d0578893f80c7706373812ee3888d9029f8e
Reviewed-on: https://chromium-review.googlesource.com/735528
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Christian Fremerey <chfremer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511593}
Former-commit-id: 4606621f1faf77ae8ba074ae3b2a343270fd883e